# experimenting-csharp-cpp-ecs-game-framwork

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  SaFiEngine.sln  build-app.sh  features.md  keymaps.md
.cache/clangd/index/: bridge.cpp.D852247AE44E72B7.idx  bridge.cpp.E2EE9536FB22C2B6.idx  cgltf.h.7F24182363F84B67.idx  cgltf.h.C2C92D5184CA586E.idx  renderer.cpp.1592B5584BB165BF.idx  renderer.cpp.6E7D2160BD9AB5BB.idx  renderer.h.4C1DAB37305911DF.idx  renderer.h.5080A9A19FA8B16D.idx  stb_image.h.614ACC49B96A9ACC.idx  stb_truetype.h.B91A683CB338D9E7.idx
.github/: FUNDING.yml
docs/: docusaurus.config.ts  ecs-guide.md  package.json  rspress.config.ts  sidebars.auto.js
docs/blog/: 2026-02-10-project-start.md  authors.yml  tags.yml
docs/docs/: _meta.json  _nav.json  index.md  intro.md  project-structure.md
docs/docs/api/: _meta.json  native-bridge.md
game_logic/: Game.cs  GameLogic.csproj  Systems.cs
managed/: Components.cs  FreeCameraState.cs  HotReload.cs  NativeBridge.cs  PhysicsBridge.cs  PhysicsWorld.cs  Program.cs  SaFiEngine.csproj  Viewer.cs  World.cs
managed/ecs/: Components.cs  FreeCameraState.cs  GameConstants.cs  NativeBridge.cs  Systems.cs  World.cs
native/: CMakeLists.txt  bridge.cpp  hello.cpp  renderer.cpp  renderer.h
native/shaders/: shader.frag  shader.vert  ui.vert
plans/: features.md  plan.md
technical_docs/: package.json  rspress.config.ts
technical_docs/docs/: 3d-pipeline.md  _meta.json  _nav.json  bridge.md  build-system.md  data-structures.md  materials.md  overview.md  render-loop.md  vulkan-setup.md
(+107 files in other folders)
